--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "R.Yagoubi",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.29.3",
     "dotenv-flow": "^3.2.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
