--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "R.Yagoubi",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
