--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^2.29.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
+    "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
