--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.9.0",
     "mongoose-sequence": "^5.3.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
