--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 PORT=8080
-DATABASE_URI='mongodb+srv://admin:testing123@clustertechnotes.dwye2pq.mongodb.net/?retryWrites=true&w=majority'
+DATABASE_URI='mongodb+srv://admin:testing123@clustertechnotes.dwye2pq.mongodb.net/CompanyDB?retryWrites=true&w=majority'
